added prod stock

--- a/productapp/templates/productapp/products.html
+++ b/productapp/templates/productapp/products.html
@@ -6,6 +6,122 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <title>Hello Properties</title>
+    <!-- bootstrap-css -->
+    <link href="{% static 'css/bootstrap.css' %} " rel="stylesheet" type="text/css" media="all" />
+    <!--// bootstrap-css -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.css' %}">
+    <!-- css -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all" />
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css" media="all" />
+    <!--// css -->
+    <!-- font-awesome icons -->
+    <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' %}">
+    <!-- //font-awesome icons -->
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}" type="text/css" media="all">
+    <style type="text/css">
+        body{
+            background-image: url("{% static 'images/image4.jpg' %}");
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+    <style>
+table, th, td {
+  border: 3px solid black;
+    color:gold;
+}
+</style>
+
+</head>
+
+<body>
+    <!-- header -->
+    <div class="header">
+        <div class="main_header">
+            <div class="header_nav">
+                <nav class="navbar navbar-default">
+                    <div class="navbar-header navbar-left">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbart">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="index.html"><img src="{% static 'images/logo.png' %}" alt="HP"/></a>
+                    </div>
+
+                    <div class="collapse navbar-collapse navbar-right" id="navbart">
+                        <nav class="nav_starts">
+                            <ul class="nav navbar-nav">
+                                <li><a href="http://127.0.0.1:8000/">Home</a></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">TRACK <b class="caret"></b></a>
+                                    <ul class="dropdown-menu nav_dropdown">
+                                        <li><a href="buyres.html">ORDER STATUS</a></li>
+                                        <li><a href="buycomm.html">CANCEL ORDER</a></li>
+                                    </ul>
+                                </li>
+
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">CART <b class="caret"></b></a>
+                                </li>
+                                <li><a href="http://localhost:8000/home/authapp/signup">Sign Up</a></li>
+                                <li><a href="http://localhost:8000/home/authapp/login">Sign In</a></li>
+                                <li><a href="http://localhost:8000/home/authapp/my_logout">log out</a></li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-bars fa-1x" aria-hidden="true"></i></a>
+                                    <ul class="dropdown-menu nav_dropdown">
+                                        <li><a href="profile.html">My Profile</a></li>
+                                        <li><a href="shortlist.html">My Shortlist</a></li>
+                                        <li><a href="sell.html">Sell/Rent Property</a></li>
+                                        <li><a href="news.html">News</a></li>
+                                        <li><a href="#">Price Trends</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </nav>
+                <form action="/productapp/search">
+            {% csrf_token %}
+            <select
+                name="pcat"
+                title="Search in"
+                >
+
+    <div class="nav-left">
+      <div id="nav-search-dropdown-card">
+
+        <option selected="selected" value="search-alias=aps">All Categories</option>
+        <option value="Electronics">Electronics</option>
+    <!--     <option value="ELECTRONICS">ELECTRONICS</option>
+        <option value="ELECTRONICS">ELECTRONICS</option>
+        <option value="ELECTRONICS">ELECTRONICS</option>
+        <option value="ELECTRONICS">ELECTRONICS</option>
+     -->    <option value="BAG">BAG</option>
+        <option value="BAG">BAG</option>
+        <option value="PLASTIC">PLASTIC</option>
+        <option value="AC">AC</option>
+
+      </div>
+    </div>
+            </select>
+
+      <input type="text"
+             name="pname"
+             placeholder="enter product name"><br>
+      <input type="submit"
+             value="search">
+        </form>
+
+
 <body>
     <!-- <body bgcolor="grey"> -->
     <table border="2">
@@ -27,10 +143,21 @@
     		<td>{{ ref.pcost }}</td>
     		<td>{{ ref.pmfdt }}</td>
     		<td>{{ ref.pexpt }}</td>
+            <td><a href="/cartapp/addcart?pid={{ref.pid}}">add to cart</a></td>
     	</tr>
 
         {% endfor %}
 
     </table>
+
+</ul>
+                    </nav>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 </body>
 </html>
