--- a/cartapp/templates/cartapp/cart.html
+++ b/cartapp/templates/cartapp/cart.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form
-    action="http://localhost:8000/>cart/addcart">
+    action="http://127.0.0.1:8000/cartapp/insertcart">
     pid:<input type="text"  value={{ pid }} name="pid"><br>
 	enter quantity:<select name="qt">
     {%  for rec in qtt %}
