added cart and modify cart

--- a/cartapp/templates/cartapp/insertcart.html
+++ b/cartapp/templates/cartapp/insertcart.html
@@ -1,1 +1,7 @@
-<h1>this is CART page</h1>
+{% extends 'homeapp/index.html' %}
+
+{% block insertcartmessage %}
+
+<p><font size="3" color="red">Sucessfully inserted</font></p>
+
+{% endblock %}
