--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -20,6 +20,10 @@
 
 </head>
 
+{% block viewcart %}
+
+{% endblock %}
+
 <body>
     <!-- header -->
     <div class="header">
@@ -34,19 +38,19 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="{% static 'index.html' %}"><img src="{% static 'images/logo.png' %}" alt="HP"/></a>
-                    </div>
-
+                    </div>                     
                     <div class="collapse navbar-collapse navbar-right" id="navbart">
                         <nav class="nav_starts">
                             <ul class="nav navbar-nav">
                                 <li><a href="">Home</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Cart <b class="caret"></b></a>
-{#                                  <ul class="dropdown-menu nav_dropdown">#}
+                                    <a href="/cartapp/viewcart">Cart <b class="caret"></b></a>
+<!-- {#                                  <ul class="dropdown-menu nav_dropdown">#} -->
 {#                                      <li><a href="buyres.html">products</a></li>#}
 {#                                      <li><a href="buycomm.html"></a></li>#}
 {#                                  </ul>#}
                                 </li>
+
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tracking <b class="caret"></b></a>
                                     <ul class="dropdown-menu nav_dropdown">
@@ -67,17 +71,31 @@
 {#                                      <li><a href="builders.html">Builders</a></li>#}
 {#                                  </ul>#}
 {#                              </li>#}
+                                
+                                {% if request.user.is_authenticated %}
+                                <li> <Hello, {{ user.uname }} ></li>
+                                <li><a href="./logout/">Log Out</a></li>
+
+                                {% else %}
 
                                 <li><a href="./signup/">sign up</a></li>
                                 <li><a href="./login/">Log In</a></li>
-                                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-bars fa-1x" aria-hidden="true"></i></a>
+
+                                {% endif %}
+                               {% block insertcartmessage %}
+
+                                {% endblock %}
+ 
+                                <!-- <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-bars fa-1x" aria-hidden="true"></i></a>
                                     <ul class="dropdown-menu nav_dropdown">
                                         <li><a href="{% static 'profile.html' %}">My Profile</a></li>
                                         <li><a href="{% static 'shortlist.html' %}">My Shortlist</a></li>
                                         <li><a href="{% static 'sell.html' %}">Sell/Rent Property</a></li>
                                         <li><a href="{% static 'news.html' %}">News</a></li>
-                                        <li><a href="#">Price Trends</a></li>
+                                        <li><a href="#">Price Trends</a></li> -->
+                                
                                     </ul>
+                                }
                                 </li>
                             </ul>
                         </nav>
@@ -168,252 +186,7 @@
     </div>
     <!--//header-->
 
-    <!-- find property -->
-    <div class="container-fluid">
-        <div class="row" id="row2">
-            <div id="heading">
-                <h1><b>Find a Property</b></h1><br/>
-                <h3>We ensure you to find your dream property by connecting<br/><br/> with us</h3>
-            </div>
-            <br/>
-            <form action="">
-                <div class="col-lg-12">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3">
-                       <h4 class="h4_style">Any Type</h4>
-                        <select name="" class="select">
-                            <option value="0">--Select--</option>
-                            <option value="1"> Residential Apartments </option>
-                            <option value="2"> Residential Land </option>
-                            <option value="3"> Independent House/Villa </option>
-                            <option value="4"> Independent/Builder Floor </option>
-                            <option value="5"> serviced Apartments  </option>
-                            <option value="6"> Farm House </option>
-                            <option value="7"> Studio Apartment </option>
-                            <option value="8"> Commercial Shop </option>
-                            <option value="9"> Commercial Land </option>
-                            <option value="10"> Commercial Showroom  </option>
-                            <option value="11"> Commercial Office </option>
-                            <option value="12"> Cold Storage </option>
-                            <option value="13"> Guest House </option>
-                            <option value="14"> Hotels/Resorts </option>
-                            <option value="15"> Industrial Land </option>
-                            <option value="16"> Agricultural Land </option>
-                            <option value="17"> Office in It Park </option>
-                            <option value="18"> Office in Bussiness Park </option>
-                            <option value="19"> Space in Retail mall </option>
-                            <option value="20"> Factory </option>
-                            <option value="21"> Others </option>
-                        </select>
-                    </div>
-                    <div class="col-lg-3 space">
-                        <h4 class="h4_style">Availability</h4>
-                        <select name="">
-                            <option value="">--select--</option>
-                            <option value="">Ready to Move</option>
-                            <option value="">Under Construction</option>
-                        </select>
-                    </div>
-                    <div class="col-lg-3 space">
-                        <h4 class="h4_style">Any Location</h4>
-                        <select name="" class="scroll">
-                                <option>--select--</option>
-                                <option value="">Delhi</option>
-                                <option value="">Guragon</option>
-                                <option value="">Nodia</option>
-                                <option value="">Greater Nodia</option>
-                                <option value="">Ghaziabad</option>
-                                <option value="">Faridhabad</option>
-                                <option value="">Bhadurghad</option>
-                                <option value="">Dharuheda</option>
-                                <option value="">Bhinadi</option>
-                                <option value="">Jaipur</option>
-                                <option value="">Udaipur</option>
-                                <option value="">Chandigarh</option>
-                                <option value="">Indore</option>
-                                <option value="">Ahmedabad</option>
-                                <option value="">Bhopal</option>
-                                <option value="">Nagpur</option>
-                                <option value="">Mumbai</option>
-                                <option value="">Chhattisgarh</option>
-                                <option value="">Pune</option>
-                                <option value="">Thane</option>
-                                <option value="">Vijayawada</option>
-                                <option value="">Coimbatore</option>
-                                <option value="">Chennai</option>
-                                <option value="">Hyderabad</option>
-                                <option value="">Banglore</option>
-                                <option value="">Mangalore</option>
-                                <option value="">Kochi</option>
-                                <option value=""> Trivandrum</option>
-                        </select>
-                    </div>
-                    <div class="col-lg-1"></div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3">
-                        <h4 class="h4_style">Property for Any</h4>
-                        <select>
-                            <option value="">--select--</option>
-                            <option value="">For Sale</option>
-                            <option value="">For Rent</option>
-                            <option value="">For Lease</option>
-                        </select>
-                    </div>
-                    <div class="col-lg-3 space">
-                        <span>
-                            <h4 class="h4_style">Price Range</h4>
-                        </span>
-                        <div id="slider-range"></div>
-                        <input type="text" id="amount" readonly>
-                    </div>
-                    <div class="col-lg-3 space abc">
-                        <input type="submit" id="x" class="btn btn-primary" value="Find Properties">
-                    </div>
-                    <div class="col-lg-1"></div>
-                </div>
-           </form>
-       </div>
-    </div>
-    <!-- //find property -->
-
-    <!-- latest properties-->
-    <div class="container-fluid">
-        <div class="row" id="row3">
-            <h1>Latest Properties</h1>
-            <p id="p1">Some amazing features of Hello Properties</p><br/>
-            <div class="col-lg-12">
-                <div class="col-lg-4 effect">
-                   <div class="img_plc">
-                        <div class="hover">
-                             <figure><img src="{% static 'images/img5.jpg' %}" alt=" " class="img-responsive"></figure>
-                        </div>
-                    </div>
-                    <h4>2 Bedroom House For Rent</h4>
-                    <p>For sale in Society: Rv Kaustuba for sale in Gardenia Grove Villas, Srisailam Highway,<br/> Hyderabad</p>
-                    <ul>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-half-o" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                        <li>(543)</li>
-                    </ul><br/>
-                    <a href="buyhome1.html" class="btn btn-primary">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-lg-4 effect">
-                    <div class="img_plc">
-                        <div class="hover">
-                             <figure><img src="{% static 'images/img2.jpg' %}" alt=" " class="img-responsive"></figure>
-                        </div>
-                    </div>
-                    <h4>High Rise Buildings For Rent</h4>
-                    <p>For sale in Society: Rv Kaustuba for sale in Gardenia Grove Villas, Srisailam Highway,<br/> Hyderabad</p>
-                    <ul>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-half-o" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                        <li>(854)</li>
-                    </ul><br/>
-                    <a href="buyhome1.html" class="btn btn-primary">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-lg-4 effect">
-                    <div class="img_plc">
-                        <div class="hover">
-                             <figure><img src="{% static 'images/img4.jpg' %}" alt=" " class="img-responsive"></figure>
-                        </div>
-                    </div>
-                    <h4>Big Luxury House For Rent</h4>
-                    <p>For sale in Society: Rv Kaustuba for sale in Gardenia Grove Villas, Srisailam Highway,<br/> Hyderabad</p>
-                    <ul>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-half-o" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                        <li>(543)</li>
-                    </ul><br/>
-                    <a href="buyhome1.html" class="btn btn-primary">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
-            </div>
-       </div>
-    </div>
-    <!-- //latest properties -->
-
-    <!-- most popular properties -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="mostPop row4">
-                <h3>Most Popular Properties</h3><br/>
-                <p>Properties In Most Popular</p><br/>
-                <div class="col-lg-12">
-                    <div class="col-lg-2"></div>
-                    <div class="cont1">
-                        <div class="col-lg-2">
-                            <a href="leasehome1.html">
-                                <img src="{% static 'images/i1.jpg' %}"  alt="Avatar" class="image1">
-                                <div id="overlay1">
-                                    <div class="text">For Lease</div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-2">
-                        <div class="cont2">
-                            <a href="renthome1.html">
-                                <img src="{% static 'images/i2.jpg' %}"  class="image2">
-                                <div id="overlay2">
-                                    <div class="text">For Rent</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="cont21">
-                            <a href="buyhome1.html">
-                                <img src="{% static 'images/i3.jpg' %}"  class="image21">
-                                <div id="overlay21">
-                                    <div class="text">For Sale</div>
-                                </div>
-                            </a>
-                        </div>
-                   </div>
-                   <div class="col-lg-2">
-                        <div class="cont3">
-                            <a href="leasehome1.html">
-                                <img src="{% static 'images/i4.jpg' %}" class="image3">
-                                <div id="overlay3">
-                                    <div class="text">For Lease</div>
-                                </div>
-                            </a>
-                        </div>
-                   </div>
-                   <div class="col-lg-2">
-                        <div class="cont4">
-                            <a href="renthome1.html">
-                                <img src="{% static 'images/i5.jpg' %}"  class="image4">
-                                <div id="overlay4">
-                                    <div class="text">For Rent</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="cont41">
-                            <a href="buyhome1.html">
-                                <img src="{% static 'images/i6.jpg' %}"  class="image41">
-                                <div id="overlay41">
-                                    <div class="text">For Sale</div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-2"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- //most popular properties -->
-
+ 
     <!-- /testimonials-->
     <div class="testimonials">
         <h3 class="main_heading">Testimonials</h3>
