resolved previously render error

--- a/cartapp/templates/cartapp/viewcart.html
+++ b/cartapp/templates/cartapp/viewcart.html
@@ -1,6 +1,6 @@
 {% extends "homeapp/index.html" %}
 
-{% block viewcart %}
+<!-- {% block viewcart %} -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +11,8 @@
     <style>
     table, th, td {
     border: 1px solid black;
+    width: 80%;
+    text-align: left;
                   }
     </style>
 </head>
@@ -45,4 +47,4 @@
 </body>
 </html>
 
-{% endblock %}
+<!-- {% endblock %} -->
