--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -20,9 +20,9 @@
 
 </head>
 
-{% block viewcart %}
+<!-- {% block viewcart %}
 
-{% endblock %}
+{% endblock %} -->
 
 <body>
     <!-- header -->
@@ -165,7 +165,9 @@
                    
                 </form>
             </div>
-            <ul class="slider">
+
+
+ -->            <ul class="slider">
               <li>
                 <figure class="slide" style="background-image: url({% static 'images/slider4.jpg' %})">
                   <figcaption>"MAKE A HELLO <i class="fa fa-phone fa-1x"></i>TO CHANGE YOUR LIVING STYLE"</figcaption>
